# Euler_cpp

./: CMakeLists.txt  README.md
cases/sod_1d/: params.json
src/core/: field_soa.hpp  grid.hpp  vtu_writer.hpp
src/fv_euler2d/: euler.hpp  flux_hll.hpp  main.cpp  recon.hpp  rk3.hpp
src/io/: csv_writer.hpp
src/parallel/: halo_exchange.hpp  mpi_partition.hpp
